--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <main>
         <h2>About This Page</h2>
-        <p>This is a simple HTML webpage created as a sample for learning how to publish websites. You can use this page to practice uploading and publishing your own content online.</p>
+        <p>This webpage is an tester website.</p>
         
         <h3>Features</h3>
         <ul>
